--- a/package.json
+++ b/package.json
@@ -11,11 +11,12 @@
     "build": "node build/build.js"
   },
   "dependencies": {
+    "better-scroll": "^0.1.7",
     "stylus": "^0.54.5",
     "stylus-loader": "^3.0.2",
     "vue": "^2.5.2",
-    "vue-router": "^3.0.1",
-    "vue-resource": "^1.0.1"
+    "vue-resource": "^1.0.1",
+    "vue-router": "^3.0.1"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
