--- a/admin/package.json
+++ b/admin/package.json
@@ -20,7 +20,9 @@
     "path-to-regexp": "2.4.0",
     "vue": "2.6.10",
     "vue-router": "3.0.6",
-    "vuex": "3.1.0"
+    "vue-count-to": "1.0.13",
+    "vuex": "3.1.0",
+    "echarts": "4.2.1"
   },
   "devDependencies": {
     "@babel/core": "7.0.0",
