--- a/client/package.json
+++ b/client/package.json
@@ -15,6 +15,7 @@
     "stylus": "^0.54.5",
     "stylus-loader": "^3.0.2",
     "vue": "^2.5.2",
+    "vue-cookies": "^1.5.13",
     "vue-resource": "^1.0.1",
     "vue-router": "^3.0.1"
   },
