--- a/admin/package.json
+++ b/admin/package.json
@@ -13,16 +13,18 @@
   },
   "dependencies": {
     "axios": "0.18.0",
+    "echarts": "4.2.1",
     "element-ui": "2.7.2",
+    "file-saver": "^2.0.1",
     "js-cookie": "2.2.0",
     "normalize.css": "7.0.0",
     "nprogress": "0.2.0",
     "path-to-regexp": "2.4.0",
     "vue": "2.6.10",
-    "vue-router": "3.0.6",
     "vue-count-to": "1.0.13",
+    "vue-router": "3.0.6",
     "vuex": "3.1.0",
-    "echarts": "4.2.1"
+    "xlsx": "^0.14.3"
   },
   "devDependencies": {
     "@babel/core": "7.0.0",
@@ -45,7 +47,7 @@
     "runjs": "^4.3.2",
     "sass-loader": "^7.1.0",
     "script-ext-html-webpack-plugin": "2.1.3",
-    "script-loader": "0.7.2",
+    "script-loader": "^0.7.2",
     "serve-static": "^1.13.2",
     "svg-sprite-loader": "4.1.3",
     "svgo": "1.2.2",
