--- a/admin/package.json
+++ b/admin/package.json
@@ -2,7 +2,7 @@
   "name": "vue-admin-template",
   "version": "4.1.0",
   "scripts": {
-    "dev": "vue-cli-service serve",
+    "dev": "vue-cli-service serve --fix",
     "build:prod": "vue-cli-service build",
     "build:stage": "vue-cli-service build --mode staging",
     "preview": "node build/index.js --preview",
