--- a/admin/package.json
+++ b/admin/package.json
@@ -13,6 +13,7 @@
   },
   "dependencies": {
     "axios": "0.18.0",
+    "crypto-js": "^3.1.9-1",
     "echarts": "4.2.1",
     "element-ui": "2.7.2",
     "file-saver": "^2.0.1",
