--- a/client/package.json
+++ b/client/package.json
@@ -11,10 +11,11 @@
     "build": "node build/build.js"
   },
   "dependencies": {
+    "@chenfengyuan/vue-qrcode": "^1.0.2",
     "better-scroll": "^0.1.7",
     "stylus": "^0.54.5",
     "stylus-loader": "^3.0.2",
-    "vue": "^2.5.2",
+    "vue": "^2.6.11",
     "vue-cookies": "^1.5.13",
     "vue-resource": "^1.0.1",
     "vue-router": "^3.0.1",
